--- a/ysfh.ipynb
+++ b/ysfh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -10,13 +10,13 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "[2]\n"
+     "text": "[2, 5, 10, 11, 16, 19]\n"
     }
    ],
    "source": [
     "people_total_num = 21\n",
     "people_left = 3\n",
-    "people_remain = 1\n",
+    "people_remain = 7\n",
     "\n",
     "people = [x for x in range(1,people_total_num+1)]\n",
     "\n",
@@ -47,8 +47,9 @@
     }
    ],
    "source": [
+    "left  step  interval \n",
     "\n",
-    "def ysfh(people_total_num,people_left,people_remain):\n",
+    "def ysfh(people_total_num,people_step,people_remain):\n",
     "\n",
     "    people = [x for x in range(1,people_total_num+1)]\n",
     "\n",
